2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Take root privilege to call get_fs_usage.

2014-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Install Dancer generated file only.

2014-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: Make perl/Amanda/Constants.pm.in from
				  perl/Amanda/Constants.pm.in.src
	* config/amanda/config.m4: Set BUILT_REV and BUILR_BRANCH
	* perl/Amanda/Constants.pm.in: Removed
	* perl/Amanda/Constants.pm.in.src: New file
	* perl/Amanda/Rest/Version.pm: Return BYUILT_DARA, BUILT_REV and
	  BUILT_BRANCH.
	* perl/Makefile.am: Make perl/Amanda/Constants.pm.in from
			    perl/Amanda/Constants.pm.in.src

2014-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (config_init_with_global): New function.
	* common-src/conffile.h: Add CONFIG_INIT_GLOBAL and
	  config_init_with_global prototype.
	* man/xml-source/amanda.conf.5.xml: Document /etc/amanda/amanda.conf
	  is loaded.
	* perl/Amanda/Config.swg: Swig CONFIG_INIT_GLOBAL and
	  config_init_with_global.
	* installcheck/Amanda_Config.pl: Use CONFIG_INIT_GLOBAL and/or
	  config_init_with_global.
	* installcheck/amgetconf.pl: Fix for amandates.
	* */*.c, */*.pl: Use CONFIG_INIT_GLOBAL and/or
	  config_init_with_global.

2014-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda/Rest/Amanda/bin/app.pl.in: Replace app.pl  with substituted
	  value.
	* Amanda/Rest/Amanda/bin/app.pl: Remove
	* Amanda/Rest/Amanda/logs/deployment.log: Remove
	* Amanda/Rest/Dumps.pm: Fix.

2014-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Use the perl Amanda::Vault Module.
	* perl/Amanda/Vault.pm: New module for vaulting.
	* perl/Amanda/Report/human.pm: Fix for vaulting.
	* perl/Amanda/Message.pm: Add Message number for Amanda::Vault.
	* perl/Amanda/Amflush.pm: Remove unused module.
	* perl/Amanda/Label.pm: Fix typo.
	* perl/Amanda/Status.pm: Fix for vaulting.